--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,6 +20,9 @@ jobs:
         with:
           node-version: 20
 
+      - name: Install angular
+        run: npm install @angular/cli
+      
       - name: Install dependencies
         run: npm install
 
