--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,7 @@ jobs:
           node-version: 20
 
       - name: Install angular
-        run: npm install @angular/cli
+        run: npm install -g @angular/cli
       
       - name: Install dependencies
         run: npm install
