--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,7 @@ jobs:
         run: npm install
 
       - name: Build Angular project
-        run: ng build -- prod
+        run: ng build
 
       - name: Run tests
         run: ng test
