--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,5 +34,17 @@ jobs:
         run: ng build
 
       - name: Create zip deployment package
-        run: echo "${{github.sha}}" zip -r ${{env.DEPLOY_PACKAGE_NAME_FILE}} ./dist/${{env.APP_NAME}}/browser -x *.git*
+        run: echo "${{github.sha}}" zip -r ${{env.DEPLOY_PACKAGE_NAME_FILE}} ./dist/${{secrets.APP_NAME}}/browser -x *.git*
+
+      - name: Copy File via SSH Password
+        uses: appleboy/scp-action@master
+        with:
+          host: ${{secrets.LIGHTSAIL_IP}}
+          username: ${{secrets.LIGTHSAIL_USERNAME}}
+          key: ${{secrets.LIGTHSAIL_KEY}}
+          password: ""
+          passphrase: ""
+          port: 22
+          source: ${{env.DEPLOY_PACKAGE_NAME_FILE}}
+          target: "/home/${{secrets.LIGHTSAIL_USERNAME}}"
 
