--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,6 +37,7 @@ jobs:
         run: echo "${{secrets.LIGHTSAIL_IP}}" zip -r ${{env.DEPLOY_PACKAGE_NAME_FILE}} ./dist/${{secrets.APP_NAME}}/browser -x *.git*
 
       - name: Copy File via SSH Password
+        run: echo "${{env.DEPLOY_PACKAGE_NAME_FILE}}"
         uses: appleboy/scp-action@master
         with:
           host: ${{secrets.LIGHTSAIL_IP}}
