--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,10 +34,9 @@ jobs:
         run: ng build
 
       - name: Create zip deployment package
-        run: echo "${{secrets.LIGHTSAIL_IP}}" zip -r ${{env.DEPLOY_PACKAGE_NAME_FILE}} ./dist/${{secrets.APP_NAME}}/browser -x *.git*
+        run: echo "${{env.DEPLOY_PACKAGE_NAME_FILE}}" zip -r ${{env.DEPLOY_PACKAGE_NAME_FILE}} ./dist/${{secrets.APP_NAME}}/browser -x *.git*
 
       - name: Copy File via SSH Password
-        run: echo "${{env.DEPLOY_PACKAGE_NAME_FILE}}"
         uses: appleboy/scp-action@master
         with:
           host: ${{secrets.LIGHTSAIL_IP}}
