--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,7 +34,10 @@ jobs:
         run: ng build
 
       - name: Create zip deployment package
-        run: echo "${{env.DEPLOY_PACKAGE_NAME_FILE}}" zip -r ${{env.DEPLOY_PACKAGE_NAME_FILE}} ./dist/${{secrets.APP_NAME}}/browser -x *.git*
+        run: zip -r ${{secrets.APP_NAME}} ./dist/${{secrets.APP_NAME}}/browser -x *.git*
+
+      - name: Check
+        run: ls
 
       - name: Copy File via SSH Password
         uses: appleboy/scp-action@master
