--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -48,4 +48,4 @@ jobs:
           port: 22
           source: angular-app
           target: "/var/www/"
-          strip_components: 1
+          tar_dereference: true
