--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -40,12 +40,12 @@ jobs:
         run: ls
 
       - name: Copy File via SSH Password
-        uses: appleboy/scp-action@v0.1.7
+        uses: appleboy/scp-action@master
+        env:
+          HOST: ${{  secrets.LIGHTSAIL_IP}}
+          USERNAME: ${{ secrets.LIGHTSAIL_USERNAME}}
+          KEY: ${{ secrets.LIGHTSAIL_KEY }}
         with:
-          host: ${{secrets.LIGHTSAIL_IP}}
-          username: ${{secrets.LIGTHSAIL_USERNAME}}
-          key: ${{secrets.LIGHTSAIL_KEY}}
-          port: 22
-          source: angular-app
+          source: angular-app.zip
           target: "/var/www/"
-          tar_dereference: true
+          strip_components: 1
