--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -47,3 +47,4 @@ jobs:
           KEY: ${{ secrets.LIGHTSAIL_KEY }}
           source: angular-app.zip
           target: "/var/www/"
+          strip_components: 2
