--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -46,5 +46,5 @@ jobs:
           USERNAME: ${{ secrets.LIGHTSAIL_USERNAME}}
           KEY: ${{ secrets.LIGHTSAIL_KEY }}
           source: angular-app.zip
-          target: "/var/www/"
+          target: "/var/www/test"
           strip_components: 2
