--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -48,3 +48,16 @@ jobs:
           source: angular-app.zip
           target: "/var/www/"
           strip_components: 2
+
+      - name: Extract File in Remote Sever
+        uses: appleboy/scp-action@master
+        with:
+          HOST: ${{  secrets.LIGHTSAIL_IP}}
+          USERNAME: ${{ secrets.LIGHTSAIL_USERNAME}}
+          KEY: ${{ secrets.LIGHTSAIL_KEY }}
+          source: angular-app.zip
+          script:
+            sudo apt-get install zip unzip
+            cd /var/www/
+            unzip angular-app.zip
+            ls
