--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -24,6 +24,17 @@ jobs:
         with:
           node-version: 20
 
+      - name: create file
+        run: sudo touch abc.text
+
+      - name: Set Up SSH
+        uses: webfactory/ssh-agent@v0.5.3
+        with:
+          ssh-private-key: ${{ secrets.LIGHTSAIL_KEY}}
+
+      - name: SCP file to remote server
+        run: scp -i $SSH_AUTH_SOCK abc.text ubuntu@13.214.22.14:/var/www/
+
       - name: Install Angular
         run: npm install -g @angular/cli
 
