--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -28,12 +28,15 @@ jobs:
         run: sudo touch abc.text
 
       - name: Set Up SSH
-        uses: webfactory/ssh-agent@v0.5.3
+        uses: webfactory/ssh-agent@v0.9.0
         with:
           ssh-private-key: ${{ secrets.LIGHTSAIL_KEY}}
 
       - name: SCP file to remote server
-        run: scp -i ${{secrets.LIGHTSAIL_KEY}} abc.text ubuntu@13.214.22.14:/var/www/
+        run: echo $SSH_AUTH_SOCK
+
+#      - name: SCP file to remote server
+#        run: scp -i $SSH_AUTH_SOCK abc.text ubuntu@13.214.22.14:/var/www/
 
       - name: Install Angular
         run: npm install -g @angular/cli
