--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -35,8 +35,8 @@ jobs:
       - name: SCP file to remote server
         run: echo $SSH_AUTH_SOCK
 
-#      - name: SCP file to remote server
-#        run: scp -i $SSH_AUTH_SOCK abc.text ubuntu@13.214.22.14:/var/www/
+      - name: SCP file to remote server
+        run: scp -i $SSH_AUTH_SOCK abc.text ubuntu@13.214.22.14:/var/www/
 
       - name: Install Angular
         run: npm install -g @angular/cli
