--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -27,17 +27,6 @@ jobs:
       - name: create file
         run: sudo touch abc.text
 
-      - name: Set Up SSH
-        uses: webfactory/ssh-agent@v0.9.0
-        with:
-          ssh-private-key: ${{ secrets.LIGHTSAIL_KEY}}
-
-      - name: SCP file to remote server
-        run: echo $SSH_AUTH_SOCK
-
-      - name: SCP file to remote server
-        run: scp -i $SSH_AUTH_SOCK abc.text ubuntu@13.214.22.14:/var/www/
-
       - name: Install Angular
         run: npm install -g @angular/cli
 
@@ -53,22 +42,33 @@ jobs:
       - name: Check
         run: ls
 
-      - name: Copy File via SSH Password
-        uses: appleboy/scp-action@master
+      - name: Set Up SSH
+        uses: webfactory/ssh-agent@v0.9.0
         with:
-          HOST: ${{  secrets.LIGHTSAIL_IP}}
-          USERNAME: ${{ secrets.LIGHTSAIL_USERNAME}}
-          KEY: ${{ secrets.LIGHTSAIL_KEY }}
-          source: angular-app.zip
-          target: "/var/www/"
-          strip_components: 1
+          ssh-private-key: ${{ secrets.LIGHTSAIL_KEY}}
 
-      - name: Extract File in Remote Sever
-        uses: appleboy/ssh-action@v0.1.7
-        with:
-          HOST: ${{  secrets.LIGHTSAIL_IP}}
-          USERNAME: ${{ secrets.LIGHTSAIL_USERNAME}}
-          KEY: ${{ secrets.LIGHTSAIL_KEY }}
-          source: angular-app.zip
-          script:
-            sudo apt-get install zip unzip && cd /var/www/ && unzip angular-app.zip && ls
+      - name: SCP file to remote server
+        run: echo $SSH_AUTH_SOCK
+
+      - name: SCP file to remote server
+        run: scp -i $SSH_AUTH_SOCK angular-app.zip ubuntu@13.214.22.14:/var/www/
+
+#      - name: Copy File via SSH Password
+#        uses: appleboy/scp-action@master
+#        with:
+#          HOST: ${{  secrets.LIGHTSAIL_IP}}
+#          USERNAME: ${{ secrets.LIGHTSAIL_USERNAME}}
+#          KEY: ${{ secrets.LIGHTSAIL_KEY }}
+#          source: angular-app.zip
+#          target: "/var/www/"
+#          strip_components: 1
+#
+#      - name: Extract File in Remote Sever
+#        uses: appleboy/ssh-action@v0.1.7
+#        with:
+#          HOST: ${{  secrets.LIGHTSAIL_IP}}
+#          USERNAME: ${{ secrets.LIGHTSAIL_USERNAME}}
+#          KEY: ${{ secrets.LIGHTSAIL_KEY }}
+#          source: angular-app.zip
+#          script:
+#            sudo apt-get install zip unzip && cd /var/www/ && unzip angular-app.zip && ls
