--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -48,10 +48,10 @@ jobs:
           ssh-private-key: ${{ secrets.LIGHTSAIL_KEY}}
 
       - name: SCP file to remote server
-        run: touch key.pem && echo ${{secrets.LIGHTSAIL_KEY}} > key.pem
+        run: touch key.pem && echo "${{secrets.LIGHTSAIL_KEY}}" > key.pem
 
       - name: SCP file to remote server
-        run: scp -i ${{env.SSH_AUTH_SOCK}} angular-app.zip ubuntu@13.214.22.14:/var/www/
+        run: scp -i key.pem angular-app.zip ubuntu@13.214.22.14:/var/www/
 
 #      - name: Copy File via SSH Password
 #        uses: appleboy/scp-action@master
