--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -52,3 +52,6 @@ jobs:
 
       - name: SCP file to remote server
         run: scp -i ${{env.SSH_AUTH_SOCK}} angular-app.zip ubuntu@13.214.22.14:/var/www/
+
+
+#  scp -i key.pem abc.txt ubuntu@13.214.22.14:/var/www/
