--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -26,7 +26,9 @@ jobs:
           node-version: 20
 
       - name: create file
-        run: sudo touch abc.text
+        run: |
+          echo "${{env.PRIVATE_KEY}}" > private_key && chmod 600 private_key
+          ssh -o StrictHostKeyChecking=no -i private_key ${{env.USER_NAME}}@${{env.HOSTNAME}}
 
       - name: Install Angular
         run: npm install -g @angular/cli
