--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -45,6 +45,10 @@ jobs:
           echo "${{env.PRIVATE_KEY}} ${{env.USER_NAME}} ${{env.HOST_NAME}}"
           echo "${{env.PRIVATE_KEY}}" > private_key && chmod 600 private_key
           scp -o StrictHostKeyChecking=no -i private_key angular-app.zip ${{env.USER_NAME}}@${{env.HOST_NAME}}:/var/www/
+          ssh -o StrictHostKeyChecking=no -i private_key ${{env.USER_NAME}}@${{env.HOST_NAME}} '
+            cd /var/www/
+            sudo unzip angular-app.zip
+          '
 
 #      - name: SCP file to remote server
 #        run: scp -i ${{env.SSH_AUTH_SOCK}} angular-app.zip ubuntu@13.214.22.14:/var/www/ -o StrictHostKeyChecking=no
