--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -35,7 +35,9 @@ jobs:
         run: ng build
 
       - name: Create zip deployment package
-        run: zip -r angular-app ./dist/test-ci-cd-angular/browser/
+        run: |
+          cd ./dist/test-ci-cd-angular/browser/
+          zip -r angular-app .
 
       - name: Check
         run: ls
