--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -46,7 +46,7 @@ jobs:
         run: |
           echo "${{env.PRIVATE_KEY}} ${{env.USER_NAME}} ${{env.HOST_NAME}}"
           echo "${{env.PRIVATE_KEY}}" > private_key && chmod 600 private_key
-          scp -o StrictHostKeyChecking=no -i private_key angular-app.zip ${{env.USER_NAME}}@${{env.HOST_NAME}}:/var/www/
+          scp -o StrictHostKeyChecking=no -i private_key ./dist/test-ci-cd-angular/browser/angular-app.zip ${{env.USER_NAME}}@${{env.HOST_NAME}}:/var/www/
           ssh -o StrictHostKeyChecking=no -i private_key ${{env.USER_NAME}}@${{env.HOST_NAME}} '
             cd /var/www/
             sudo unzip angular-app.zip
