--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -51,4 +51,5 @@ jobs:
           ssh -o StrictHostKeyChecking=no -i private_key ${{env.USER_NAME}}@${{env.HOST_NAME}} '
             cd ${{env.SERVER_ROOT_DIRECTORY}}
             sudo unzip -o ${{env.APP_NAME}}.zip
+            sudo rm ${{env.APP_NAME}}.zip
           '
